fonttech.css
@font-face {
	font-family: "fonttech";
	src: url("fonttech.eot?b733cc2594f35a0c912980c7a6c5ad05?#iefix") format("embedded-opentype"),
url("fonttech.woff2?b733cc2594f35a0c912980c7a6c5ad05") format("woff2"),
url("fonttech.woff?b733cc2594f35a0c912980c7a6c5ad05") format("woff");
}

.ft {
	line-height: 1;
}

.ft:before {
	font-family: fonttech !important;
	font-style: normal;
	font-weight: normal !important;
	vertical-align: top;
}

.ft-opt:before {
	content: "\f101";
}
.ft-atlassian:before {
	content: "\f102";
}
.ft-google:before {
	content: "\f103";
}
.ft-apple:before {
	content: "\f104";
}
.ft-microsoft:before {
	content: "\f105";
}
.ft-oracle:before {
	content: "\f106";
}
.ft-adobe:before {
	content: "\f107";
}
.ft-amazon:before {
	content: "\f108";
}
.ft-facebook:before {
	content: "\f109";
}
.ft-twitter:before {
	content: "\f10a";
}
.ft-netflix:before {
	content: "\f10b";
}
.ft-whatsup:before {
	content: "\f10c";
}
.ft-snapchat:before {
	content: "\f10d";
}
.ft-sketch:before {
	content: "\f10e";
}
.ft-figma:before {
	content: "\f10f";
}
.ft-atom:before {
	content: "\f110";
}
.ft-slack:before {
	content: "\f111";
}
.ft-drawio:before {
	content: "\f112";
}
.ft-linkedin:before {
	content: "\f113";
}
.ft-docker:before {
	content: "\f114";
}
.ft-dropbox:before {
	content: "\f115";
}
.ft-box:before {
	content: "\f116";
}
.ft-microsoft-onedrive:before {
	content: "\f117";
}
.ft-microsoft-azure:before {
	content: "\f118";
}
.ft-google-cloud:before {
	content: "\f119";
}
.ft-amazon-aws:before {
	content: "\f11a";
}
.ft-javascript:before {
	content: "\f11b";
}
.ft-nodejs:before {
	content: "\f11c";
}
.ft-reactjs:before {
	content: "\f11d";
}
.ft-css3:before {
	content: "\f11e";
}
.ft-ibm:before {
	content: "\f11f";
}
.ft-html5:before {
	content: "\f120";
}
.ft-sass:before {
	content: "\f121";
}
.ft-java:before {
	content: "\f122";
}
.ft-microsoft-dotnet:before {
	content: "\f123";
}
.ft-mysql:before {
	content: "\f124";
}
.ft-mongodb:before {
	content: "\f125";
}
.ft-ibm-lotus-domino:before {
	content: "\f126";
}
.ft-microsoft-exchange:before {
	content: "\f127";
}
.ft-google-play:before {
	content: "\f128";
}
.ft-apple-app-store:before {
	content: "\f129";
}
.ft-less:before {
	content: "\f129";
}
.ft-uber:before {
	content: "\f12a";
}
.ft-lyft:before {
	content: "\f12b";
}
.ft-adobe-illustrator:before {
	content: "\f12c";
}
.ft-adobe-photoshop:before {
	content: "\f12d";
}
.ft-apple-music:before {
	content: "\f12e";
}
.ft-apple-pay:before {
	content: "\f12f";
}
.ft-android:before {
	content: "\f130";
}
.ft-apple-ios:before {
	content: "\f131";
}
.ft-airbnb:before {
	content: "\f132";
}
.ft-apple-carplay:before {
	content: "\f133";
}
.ft-angular:before {
	content: "\f134";
}
.ft-arduino:before {
	content: "\f135";
}
.ft-asana:before {
	content: "\f136";
}
.ft-amd:before {
	content: "\f137";
}
.ft-nvidia:before {
	content: "\f138";
}
.ft-akamai:before {
	content: "\f139";
}
.ft-cisco:before {
	content: "\f13a";
}
.ft-tesla:before {
	content: "\f13b";
}
.ft-spacex:before {
	content: "\f13c";
}
.ft-autodesk:before {
	content: "\f13d";
}
.ft-alienware:before {
	content: "\f13e";
}
.ft-monster:before {
	content: "\f13f";
}
.ft-redbull:before {
	content: "\f140";
}
.ft-apple-macosx:before {
	content: "\f141";
}
.ft-bash:before {
	content: "\f142";
}
.ft-ruby-on-rails:before {
	content: "\f143";
}
.ft-redhat:before {
	content: "\f144";
}
.ft-linux:before {
	content: "\f145";
}
.ft-ubuntu:before {
	content: "\f146";
}
.ft-telegram:before {
	content: "\f147";
}
.ft-intel:before {
	content: "\f148";
}
.ft-php:before {
	content: "\f149";
}
.ft-python:before {
	content: "\f14a";
}
.ft-tensorflow:before {
	content: "\f14b";
}
.ft-ubiquiti:before {
	content: "\f14c";
}
.ft-microsoft-office:before {
	content: "\f14d";
}
.ft-microsoft-word:before {
	content: "\f14e";
}
.ft-microsoft-excel:before {
	content: "\f14f";
}
.ft-microsoft-onenote:before {
	content: "\f150";
}
.ft-microsoft-powerpoint:before {
	content: "\f151";
}
.ft-microsoft-outlook:before {
	content: "\f152";
}
.ft-coffee:before {
	content: "\f153";
}
.ft-paypal:before {
	content: "\f154";
}
.ft-square:before {
	content: "\f155";
}
.ft-braintree:before {
	content: "\f156";
}
.ft-postgresql:before {
	content: "\f157";
}
.ft-sqlite:before {
	content: "\f158";
}
.ft-redis:before {
	content: "\f159";
}
.ft-elasticsearch:before {
	content: "\f15a";
}
.ft-bitcoin:before {
	content: "\f15b";
}
.ft-ethereum:before {
	content: "\f15c";
}
.ft-ripple:before {
	content: "\f15d";
}
.ft-litecoin:before {
	content: "\f15e";
}
.ft-leet:before {
	content: "\f15f";
}
.ft-ssh:before {
	content: "\f160";
}
.ft-evernote:before {
	content: "\f161";
}
.ft-atlassian-bitbucket:before {
	content: "\f162";
}
.ft-github:before {
	content: "\f163";
}

